Fix horizontal scrolling: overflow-x hidden

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -143,3 +143,7 @@ input:checked~.hamburger span:nth-child(1) {
     width: auto;
     height: auto;
   }
+
+  main {
+    overflow-x: hidden;
+  }
